--- a/src/components/Chart/Chart.module.css
+++ b/src/components/Chart/Chart.module.css
@@ -1,5 +1,12 @@
 .container{
     display: flex;
     justify-content: center;
-    width: 80%;
+    width: 75%;
+}
+
+@media (max-width: 770px) {
+    .container{
+        width: 100%;
+    }
+
 }
