--- a/src/components/Chart/Chart.module.css
+++ b/src/components/Chart/Chart.module.css
@@ -2,6 +2,8 @@
     display: flex;
     justify-content: center;
     width: 75%;
+    background-color: rgba(255, 255, 255, 0.75);
+    color: white !important;
 }
 
 @media (max-width: 770px) {
